# mnist-gan

./: .gitignore  .isort.cfg  .pre-commit-config.yaml  LICENSE  README.md  classifier.py  data.py  download_mnist.sh  generate.py  model.py  pyproject.toml  requirements.txt  setup.cfg  train.py  utils.py
.reuse/: dep5
gan/: __init__.py  data.py  generation.py  models.py  training.py  utils.py
gan/evaluation/: __init__.py  fid.py  gan.py
gan/models/: __init__.py  classifier.py  gan.py
gan/training/: __init__.py  classifier.py  gan.py
