[tool.poetry]
name = "mnist-gan"
version = "0.1.0"
description = "A template repository for GANs"
authors = ["Harish Rajagopal <harish.rajagopals@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8,<3.10"
tensorflow = "^2.8.0"
tqdm = "^4.55.1"
toml = "^0.10.2"
numpy = "^1.22.0"

[tool.poetry.dev-dependencies]
pre-commit = "^2.9.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.black]
line-length = 79

[tool.isort]
profile = "black"
line_length = 79

[tool.pydocstyle]
convention = "google"
