# SPDX-FileCopyrightText: 2020 Harish Rajagopal <harish.rajagopals@gmail.com>
#
# SPDX-License-Identifier: CC0-1.0

[tool.poetry]
name = "mnist-gan"
version = "0.1.0"
description = "A template repository for GANs"
authors = ["Harish Rajagopal <harish.rajagopals@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8,<3.10"
tensorflow = "^2.11.1"
tqdm = "^4.66.3"
toml = "^0.10.2"
numpy = "^1.22.0"

[tool.poetry.dev-dependencies]
pre-commit = "^2.9.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.black]
line-length = 79

[tool.ruff]
extend-select = ["C90", "D", "I"]
line-length = 79

[tool.ruff.pydocstyle]
convention = "google"

[tool.mypy]
ignore_missing_imports = true
